# skin_detector

./: .gitignore  CMakeLists.txt  README.md
src/: data.cpp  data.h  skin_detector.cpp
tools/: ROC.m  importROCdata.m  plotROCgeneral.m
